homework_v3_dsbd/k8s/kafka.yaml
#Questo deployment configura un singolo nodo Kafka che funge sia da Broker
#che da Controller (modalità "Combined").
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          # Immagine ufficiale Confluent che utilizza Kafka in modalità KRaft
          image: confluentinc/cp-kafka:7.4.0
          # RISORSE (Specifiche per Java/Kafka) ---
          # Kafka è un'applicazione Java, che tende a consumare molta RAM.
          # Impostiamo limiti più generosi rispetto ai microservizi Python.
          resources:
            requests:
              memory: "512Mi" # Minimo mezzo giga per far partire la JVM
              cpu: "250m"
            limits:
              memory: "1Gi"   # Tetto massimo a 1GB per evitare OOM del nodo
              cpu: "1000m"    # Può usare fino a 1 core intero se serve
          ports:
            - containerPort: 9092 # Porta standard per il traffico client
          #Questo script serve per inizializzare KRaft.
          #Abbiamo usato 3 comandi shell per eseguire queste operazioni:
          #il primo serve ad assegnare a Kafka un ID univoco, cosa che veniva fatta automaticamente
          #da Zookeeper. Nel nostro caso non abbiamo assegnato un vero ID random, ma un ID fisso
          #per semplicità.
          #Il secondo serve per formattare lo storage, in modo che Kafka possa salvare
          #i suoi metadati interni, come quali topic esistono, ecc. Senza questo
          #Kafka fallirebbe all'avvio non sapendo dove salvare lo stato del cluster.
          #Aggiungiamo anche un flag che permette di ignorare la formattazione, nel caso in cui
          #il disco sia già formattato.
          #L'ultimo comando avvia Kafka normalmente.
          command:
            - "sh"
            - "-c"
            - |
              # Generiamo un ID se non esiste (o usiamo quello fisso)
              export CLUSTER_ID=MkU3OEVBNTcwNTJENDM2Qk
              
              echo "Formattazione Storage KRaft con ID: $CLUSTER_ID"
              # Formattiamo il path dei dati ignorando errori se è già formattato
              kafka-storage format -t $CLUSTER_ID -c /etc/kafka/kafka.properties --ignore-formatted
              
              # Avviamo Kafka normalmente
              /etc/confluent/docker/run
          #Configurazione ambiente di Kafka
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service #Nome host usato in Python (KAFKA_BOOTSTRAP_SERVERS)
spec:
  selector:
    app: kafka
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
