homework_v3_dsbd/k8s/prometheus.yaml
#Abbiamo deciso di usare un StatefulSet per il server Prometheus.
#Questo ci permette di avere uno storage persistente (PVC) invece di uno volatile.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus-server
spec:
  #serviceName è obbligatorio per gli StatefulSet per mantenere l'identità di rete stabile.
  serviceName: "prometheus-service"
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      nodeSelector:
        tier: monitoring
      containers:
        - name: prometheus
          image: prom/prometheus:v2.44.0 #Immagine ufficiale di Prometheus
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"   # 1GB è sufficiente per il nostro volume di metriche
              cpu: "500m"
          args:
            #Gli diciamo dove trovare il config file (che monteremo col volume)
            - "--config.file=/etc/prometheus/prometheus.yml"
            #Dove salvare i dati delle serie temporali
            - "--storage.tsdb.path=/prometheus/"
            #Opzionale: diciamo a Prometheus di conservare i dati per 30 giorni
            - "--storage.tsdb.retention.time=30d"
          ports:
            - containerPort: 9090
          volumeMounts:
            #Montiamo la ConfigMap come file fisico
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            #Montiamo lo storage per i dati (ora persistente)
            - name: prometheus-storage
              mountPath: /prometheus/
      volumes:
        #Trasforma la ConfigMap definita sopra in un file sul filesystem
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf


  #Persistenza dei dati
  #Genera automaticamente una PVC (Persistent Volume Claim) dedicata per Prometheus.
  #Questo garantisce che lo storico delle metriche non vada perso al riavvio del pod.
  volumeClaimTemplates:
    - metadata:
        name: prometheus-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  selector:
    app: prometheus-server
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
